Fixed header alignment

--- a/app/app.css
+++ b/app/app.css
@@ -13,7 +13,11 @@ html, body {
   font-family: 'Open Sans', sans-serif !important;
 }
 #view {
-  height: 96%;
+  position: fixed;
+  top: 70px;
+  bottom: 0px;
+  right: 0px;
+  left:0px
 }
 #map {
   height: 100%;
@@ -21,11 +25,12 @@ html, body {
 }
 
 .category_container{
-  position: absolute;
+  position: fixed;
   padding: 2em;
   float:left;
   width: 15%;
-  height: 96%;
+  bottom:0px;
+  top:70px;
   border-right-style: none;
   background-color: #5178A0;
   color: white;
@@ -146,15 +151,22 @@ html, body {
   cursor: pointer;
 }
 #navbar {
-  overflow: hidden;
   margin-left: 15%;
   margin-right: 15%;
+  position: fixed;
+  height: 70px;
+  top: 0;
+  right: 0px;
+  left: 0px;
 }
 #navbar a {
-  height:100%;
+  height: 70px;
   text-transform: uppercase;
   font-weight: 300;
   letter-spacing: 2px;
+  display: table-cell;
+  vertical-align: middle;
+  float: none;
 }
 #navbar a:hover {
   color: #EC8351;
